package edu.hitsz.airFac;

import edu.hitsz.aircraft.AbstractAircraft;
import edu.hitsz.aircraft.AbstractEnemy;

public abstract class EnemyFactory {
    public abstract AbstractEnemy CreatEnemy();
}
